[package]
name = "benchmark-upgrader"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0" , features = ["full", "visit-mut"] }
quote = "1.0"
proc-macro2 = "1.0"
regex = "1.10.2"
nom = "7.1.3"
anyhow = "1.0.75"

[dev-dependencies]
trybuild = "1.0.85"
